fix overflow on mobile

--- a/src/components/sections/homepage/quotes/quotes.module.scss
+++ b/src/components/sections/homepage/quotes/quotes.module.scss
@@ -107,6 +107,7 @@
 
         .quoteWrapper {
           position: relative;
+          width: 100%;
 
           @include respond-to('min-tablet') {
             &::before {
@@ -151,7 +152,7 @@
           gap: 24px;
 
           @include respond-to('tablet') {
-            gap: 28px;
+            gap: 16px;
           }
 
           button {
@@ -164,6 +165,11 @@
             svg {
               height: 20px;
               max-width: 140px;
+
+              @include respond-to('mobile') {
+                height: 16px;
+                max-width: 100px;
+              }
             }
           }
         }
